# ros2_vo

./: .gitignore  Dockerfile  README.md  docker-compose.yml
old/ROS2-Stereo-Visual-Odometry-G2O/: CMakeLists.txt  package.xml
old/ROS2-Stereo-Visual-Odometry-G2O/executables/: stereo_visual_slam_node.cpp
old/ROS2-Stereo-Visual-Odometry-G2O/include/stereo_visual_slam/: config.hpp  feature.hpp  frame.hpp  frontend.hpp  map.hpp  map_point.hpp  pinhole_camera.hpp  stereo_visual_slam.hpp  viewer.hpp
old/ROS2-Stereo-Visual-Odometry-G2O/src/: backend.cpp  config.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  map_point.cpp  pinhole_camera.cpp  stereo_visual_slam.cpp  viewer.cpp
old/my_stereo_vo/: CMakeLists.txt  package.xml
old/my_stereo_vo/cmake/: FindG2O.cmake
old/my_stereo_vo/executables/: stereo_visual_slam_node.cpp
old/my_stereo_vo/include/my_stereo_vo/: backend.hpp  feature.hpp  frame.hpp  frontend.hpp  map.hpp  map_point.hpp  pinhole_camera.hpp  stereo_visual_slam.hpp
old/my_stereo_vo/src/: backend.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  map_point.cpp  pinhole_camera.cpp  stereo_visual_slam.cpp
robot_ws/: .clang-format  buildsource.bash  debug.txt  map_management_logic.md  runvonode.bash
robot_ws/.cache/clangd/index/: config.hpp.012E822D5DBEE43F.idx  kitti_image_publisher_node.cpp.3881C67E88DF2208.idx  ubicoders_svo_node.cpp.3A6AFCE9B304BCC2.idx  ubicoders_svo_node.hpp.72EF5DE3A5920D57.idx  ubicoders_svo_publishers.cpp.49EDB8390303EF97.idx  ubicoders_svo_publishers.hpp.E766BF1709FF1BA1.idx
robot_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
robot_ws/install/kitti_image_publisher/share/ament_index/resource_index/package_run_dependencies/: kitti_image_publisher
robot_ws/install/kitti_image_publisher/share/ament_index/resource_index/parent_prefix_path/: kitti_image_publisher
robot_ws/install/kitti_image_publisher/share/kitti_image_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws/install/kitti_image_publisher/share/kitti_image_publisher/cmake/: kitti_image_publisherConfig-version.cmake  kitti_image_publisherConfig.cmake
robot_ws/install/kitti_image_publisher/share/kitti_image_publisher/environment/: ament_prefix_path.dsv  path.dsv
robot_ws/install/ubicoders_stereo_vo/share/ament_index/resource_index/package_run_dependencies/: ubicoders_stereo_vo
robot_ws/install/ubicoders_stereo_vo/share/ament_index/resource_index/parent_prefix_path/: ubicoders_stereo_vo
robot_ws/install/ubicoders_stereo_vo/share/ubicoders_stereo_vo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_ws/install/ubicoders_stereo_vo/share/ubicoders_stereo_vo/cmake/: ubicoders_stereo_voConfig-version.cmake  ubicoders_stereo_voConfig.cmake
robot_ws/install/ubicoders_stereo_vo/share/ubicoders_stereo_vo/environment/: ament_prefix_path.dsv  path.dsv
robot_ws/log/: latest_build
robot_ws/src/ROS2-Stereo-Visual-Odometry-G2O/: CMakeLists.txt  README.md
robot_ws/src/ROS2-Stereo-Visual-Odometry-G2O/include/stereo_visual_slam/: backend.hpp  config.hpp  feature.hpp  frame.hpp  frontend.hpp  map.hpp  map_point.hpp  pinhole_camera.hpp  stereo_visual_slam.hpp  viewer.hpp
robot_ws/src/ROS2-Stereo-Visual-Odometry-G2O/launch/: slam.launch.py
robot_ws/src/ROS2-Stereo-Visual-Odometry-G2O/src/: backend.cpp  frontend.cpp  map.cpp  pinhole_camera.cpp  stereo_visual_slam.cpp  viewer.cpp
robot_ws/src/customdata_publisher/: CMakeLists.txt  package.xml
robot_ws/src/customdata_publisher/launch/: customdata_launch.py
robot_ws/src/customdata_publisher/src/: customdata_publisher_node.cpp
robot_ws/src/euroc_image_publisher/: CMakeLists.txt  package.xml
robot_ws/src/euroc_image_publisher/src/: euroc_image_publisher_node.cpp
robot_ws/src/kitti_image_publisher/: CMakeLists.txt  package.xml
robot_ws/src/kitti_image_publisher/src/: kitti_image_publisher_node.cpp
robot_ws/src/ubicoders_stereo_vo/: CMakeLists.txt  package.xml
robot_ws/src/ubicoders_stereo_vo/include/ubicoders_stereo_vo/: config.hpp  stereo_camera.hpp  ubicoders_svo_node.hpp  ubicoders_svo_publishers.hpp
robot_ws/src/ubicoders_stereo_vo/src/: stereo_camera.cpp  ubicoders_svo_node.cpp  ubicoders_svo_publishers.cpp
robot_ws/src/ubicoders_svo/: CMakeLists.txt  README.md  ecs_migration_plan.md  package.xml
robot_ws/src/ubicoders_svo/executables/: svo_main.cpp
robot_ws/src/ubicoders_svo/include/svo/: backend.hpp  config.hpp  feature.hpp  frame.hpp  frontend.hpp  map.hpp  map_point.hpp  stereo_geometry.hpp  svo_node.hpp  viewer.hpp
robot_ws/src/ubicoders_svo/launch/: slam.launch.py
robot_ws/src/ubicoders_svo/src/: backend.cpp  frontend.cpp  map.cpp  stereo_geometry.cpp  svo_node.cpp  viewer.cpp
